tenants/tenant-abc-app/abc-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: abc-web
    tenant: tenant-abc-app
  name: abc-web
  namespace: tenant-abc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: abc-web
      tenant: tenant-abc-app
  template:
    metadata:
      labels:
        app: abc-web
        tenant: tenant-abc-app
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: abc-web
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
